fixed home image

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ https://www.tooplate.com/view/2115-marvel
       <div class="container p-3 mb-2 bg-warning text-dark">
         <div>
           <div class="text-center">
-            <img src="images/software-developer-902509.png" class="rounded float-left">
+            <img src="images/undraw/Female Developer.svg" height="256" width="256" class="rounded float-left">
             <h3 class="small-text">Welcome to my page!</h3>
             <h1>I'm Amina Elathir</h1>
             <p>A Software Engineer Based in Edmonton, Alberta</p>
@@ -90,7 +90,7 @@ https://www.tooplate.com/view/2115-marvel
       </div>
     </section>
 
-    
+
     <!-- ABOUT -->
     <section class="about full-screen d-lg-flex justify-content-center align-items-center" id="about">
         <div class="container">
