--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@ https://www.tooplate.com/view/2115-marvel
 
     <!-- HOME -->
     <section class="home full-screen d-lg-flex justify-content-center align-items-center" id="home">
-      <div class="container p-3 mb-2 .bg-maroon .bg-darken-xs">
+      <div class="container p-3 mb-2 .bg-warning">
         <div>
           <div class="text-center">
-            <img src="images/undraw/Female Developer.svg" height="256" width="256" class="rounded float-left">
+            <img src="images/undraw/Female Developer.svg" height="260" width="260" class="rounded float-left">
             <h3 class="small-text">Welcome to my page!</h3>
             <h1>I'm Amina Elathir</h1>
             <p>A Software Engineer Based in Edmonton, Alberta</p>
