--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ https://www.tooplate.com/view/2115-marvel
 
     <!-- HOME -->
     <section class="home full-screen d-lg-flex justify-content-center align-items-center" id="home">
-      <div class="container p-3 mb-2 .bg-warning">
+      <div class="container p-3 mb-2 bg-warning">
         <div>
           <div class="text-center">
             <img src="images/undraw/Female Developer.svg" height="260" width="260" class="rounded float-left">
