--- a/index.html
+++ b/index.html
@@ -75,8 +75,11 @@ https://www.tooplate.com/view/2115-marvel
 
     <!-- HOME -->
     <section class="home full-screen d-lg-flex justify-content-center align-items-center" id="home">
+      <div style="background-image: url('images/Hero.jpg');
+      background-size: cover; height:480px; padding-top:80px;">
+      </div>
+
       <div class="container p-3 mb-2 bg-warning">
-        <div>
           <div class="text-center">
             <img src="images/undraw/Female Developer.svg" height="300" width="300" class="rounded float-left">
             <h3 class="small-text">Welcome to my page!</h3>
@@ -85,7 +88,6 @@ https://www.tooplate.com/view/2115-marvel
             <a href="#about" class="col-auto example-block btn mr-lg-2 custom-btn">find out more about me!<img class="image" src="https://i.imgur.com/q3Q5A5e.gif" alt="Smiling Face With Heart-Eyes" title="Smiling Face With Heart-Eyes" width="34" height="34"></a>
           <br></br>
           </div>
-        </div>
       </div>
     </section>
 
