--- a/index.html
+++ b/index.html
@@ -75,12 +75,10 @@ https://www.tooplate.com/view/2115-marvel
 
     <!-- HOME -->
     <section class="home full-screen d-lg-flex justify-content-center align-items-center" id="home">
-      <div class="bg-image" 
-     style="background-image: url('images/Hero.jpg');
-            height: 100vh">
-      </div>
+      
 
       <div class="container p-3 mb-2">
+        <div class="bg-image" style="background-image: url('images/Hero.jpg');height: 100vh"></div>
           <div class="text-center">
             <img src="images/undraw/Female Developer.svg" height="300" width="300" class="rounded float-left">
             <h3 class="small-text">Welcome to my page!</h3>
