--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ https://www.tooplate.com/view/2115-marvel
       
 
       <div class="container p-3 mb-2">
-          <div class="text-center bg-image" style="background-image: url('images/Hero.jpg');height: 55vh" filter: brightness(40%)>
+          <div class="text-center bg-image" style="background-image: url('images/mesh-1430108.png');height: 55vh" filter: brightness(40%)>
             <!-- <img src="images/undraw/Female Developer.svg" height="300" width="300" class="rounded float-left"> -->
             <h3 class="small-text">Welcome to my page!</h3>
             <h1>I'm Amina Elathir</h1>
