--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ https://www.tooplate.com/view/2115-marvel
 
     <!-- HOME -->
     <section class="home full-screen d-lg-flex justify-content-center align-items-center" id="home">
-      <div class="container p-3 mb-2">
+      <div class=" p-3 mb-2">
           <div class="text-center bg-image" style="background-image: url('images/mesh-1430108.png');height: 55vh" filter: brightness(40%)>
             <!-- <img src="images/undraw/Female Developer.svg" height="300" width="300" class="rounded float-left"> -->
             <br></br>
@@ -91,7 +91,7 @@ https://www.tooplate.com/view/2115-marvel
 
     <!-- ABOUT -->
     <section class="about full-screen d-lg-flex justify-content-center align-items-center py-5" id="about">
-      <div class="container">
+      
           <div class="row">
               
               <div class="col-lg-7 col-md-14 col-12 d-flex align-items-center">
@@ -123,7 +123,7 @@ https://www.tooplate.com/view/2115-marvel
               </div>
 
           </div>
-      </div>
+   
   </section>
 
 
