--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
 
     <!-- MAIN STYLE -->
     <link rel="stylesheet" href="css/tooplate-style.css">
+
+
+    <!-- my addition -->
+    <link rel="stylesheet" href="css/scrollup.css">
+    <link rel="stylesheet" href="css/skills.css">
     
 <!--
 
@@ -336,6 +341,8 @@ https://www.tooplate.com/view/2115-marvel
                </div>
           </div>
      </footer>
+    <!-- scroll up -->
+  <a href="#" id="toTopBtn" class="cd-top text-replace js-cd-top cd-top--is-visible cd-top--fade-out" data-abc="true"></a>
 
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/popper.min.js"></script>
