--- a/index.html
+++ b/index.html
@@ -329,8 +329,7 @@ https://www.tooplate.com/view/2115-marvel
     </section>
 
     <!-- scroll up -->
-    <a href="#" id="toTopBtn" class="cd-top text-replace js-cd-top cd-top--is-visible cd-top--fade-out" data-abc="true"></a>
-
+    <a id="back-to-top" href="#" class="btn btn-light btn-lg back-to-top" role="button"><i class="fas fa-chevron-up"></i></a>
 
     <!-- FOOTER -->
      <footer class="footer py-5">
