--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 
     <!-- my addition -->
     <link rel="stylesheet" href="css/scrollup.css">
-    <link rel="stylesheet" href="css/skills.css">
     
 <!--
 
@@ -353,6 +352,9 @@ https://www.tooplate.com/view/2115-marvel
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/smoothscroll.js"></script>
     <script src="js/custom.js"></script>
+
+    <!-- my addition -->
+    <script src="js/scrollup.js"></script>
 
   </body>
 </html>
