--- a/index.html
+++ b/index.html
@@ -327,9 +327,9 @@ https://www.tooplate.com/view/2115-marvel
       </div>
     </section>
 
-    <!-- scroll up -->
-    <a id="back-to-top" href="#" class="btn btn-light btn-lg back-to-top" role="button"><i class="fas fa-chevron-up"></i></a>
-
+   <!-- scroll up -->
+  <a href="#" id="toTopBtn" class="cd-top text-replace js-cd-top cd-top--is-visible cd-top--fade-out" data-abc="true"></a>
+  
     <!-- FOOTER -->
      <footer class="footer py-5">
           <div class="container">
