--- a/index.html
+++ b/index.html
@@ -214,13 +214,25 @@ https://www.tooplate.com/view/2115-marvel
                 </div>
 
                 <div class="owl-carousel owl-theme center">
+
+
+                  <div class="item">
+                    <div class="project-info">
+                      <h4>Class Scheduler</h4>
+                      <p>A university timetable scheduler with Genetic Algorithm in Python3 (optimized approach)</p>
+                      <img src="images/project/timetable.jpg" class="img-fluid" alt="project 1 image">
+                      <br><br>
+                      <a class="btn custom-btn custom-btn-bg custom-btn-link" href="https://github.com/Amna-A/GeneticAlgorithm" target="_blank">Source Code</a>
+                      <br><br>
+                    </div>
+                  </div>
                   
                   <div class="item">
                     <div class="project-info">
                       <h4>Safari Rush Hour</h4>
                       <p>A 7 x 7 grid game using C++.</p>
                       <p>It is a variation on the popular <a href="https://www.thinkfun.com/products/safari-rush-hour/" target="_blank" class="text-left">Rush Hour game from Binary Arts</a>. The object is to move your car through a tangle of obstacles to reach the exit.</p>
-                      <img src="images/project/safari-test0.gif" class="img-fluid" alt="project 1 image">
+                      <img src="images/project/safari-test0.gif" class="img-fluid" alt="project 2 image">
                       <br><br>
                       <a class="btn custom-btn custom-btn-bg custom-btn-link" href="https://github.com/Amna-A/Safari2" target="_blank">Source Code</a>
                       <br><br>
@@ -231,7 +243,7 @@ https://www.tooplate.com/view/2115-marvel
                     <div class="project-info">
                       <h4>Search Trees (Public Crate)</h4>
                       <p>Utilities for binary search tree, red-black tree, and AVL tree in Rust</p>
-                      <img src="images/project/search_trees.png" class="img-fluid" alt="project 2 image">
+                      <img src="images/project/search_trees.png" class="img-fluid" alt="project 3 image">
                       <br><br>
                       <a class="btn custom-btn custom-btn-bg custom-btn-link" href="https://github.com/ECE520-Project/trees" target="_blank">Source Code</a>
                       <a class="btn mr-lg-2 custom-btn" href="https://crates.io/crates/search_trees" target="_blank">Download Crate</a>
@@ -243,9 +255,21 @@ https://www.tooplate.com/view/2115-marvel
                       <h4>Ataxx (Console Project)</h4>
                       <p>A 2 player console game using C++.</p>
                       <p class="text-left">Ataxx is an abstract strategy board game that involves play by two parties. The object of the game is for the player to make pieces constitute a majority of the pieces on the board at the end of the game, by converting as many of their opponent's pieces as possible. Players may chose to add obtacles on the board.</p>
-                      <img src="images/project/Ataxx (1).gif" class="img-fluid" alt="project 3 image">
+                      <img src="images/project/Ataxx (1).gif" class="img-fluid" alt="project 4 image">
                       <br><br>
                       <a class="btn custom-btn custom-btn-bg custom-btn-link" href="http://github.com/Amna-A/Ataxx-with-AlphaBeta" target="_blank">Source Code</a>
+                      <br><br>
+                    </div>
+                  </div> 
+
+                  <div class="item">
+                    <div class="project-info">
+                      <h4>Student Info. Keeper</h4>
+                      <p>A GUI using Python3's TKinter & SQLite</p>
+                      <p class="text-left">A simple and easy GUI for teachers to enter and keep student's names and grades.</p>
+                      <img src="images/project/student-info.jpg" class="img-fluid" alt="project 4 image">
+                      <br><br>
+                      <a class="btn custom-btn custom-btn-bg custom-btn-link" href="https://github.com/Amna-A/teacher-app" target="_blank">Source Code</a>
                       <br><br>
                     </div>
                   </div> 
