--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ https://www.tooplate.com/view/2115-marvel
                     <div class="project-info">
                       <h4>Class Scheduler</h4>
                       <p>A university timetable scheduler with Genetic Algorithm in Python3 (optimized approach)</p>
-                      <img src="images/project/resize-tt.jpg" class="img-fluid" alt="project 1 image">
+                      <img src="images/project/resize-tt.jpg" class="img-fluid" alt="project 1 image" width="1310" height="717">
                       <br><br>
                       <a class="btn custom-btn custom-btn-bg custom-btn-link" href="https://github.com/Amna-A/GeneticAlgorithm" target="_blank">Source Code</a>
                       <br><br>
