--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ https://www.tooplate.com/view/2115-marvel
             <br></br>
             <h3 class="small-text">Welcome to my page!</h3>
             <h1>I'm Amina Eltahir</h1>
-            <p>A Software Engineer Based in Edmonton, Alberta</p>
+            <p>A Software Engineer Based in Alberta</p>
             <a href="#about" class="col-auto example-block btn mr-lg-2 custom-btn">find out more about me!<img class="image" src="https://i.imgur.com/q3Q5A5e.gif" alt="Smiling Face With Heart-Eyes" title="Smiling Face With Heart-Eyes" width="34" height="34"></a>
           <br></br>
           </div>
@@ -220,7 +220,7 @@ https://www.tooplate.com/view/2115-marvel
                     <div class="project-info">
                       <h4>Class Scheduler</h4>
                       <p>A university timetable scheduler with Genetic Algorithm in Python3 (optimized approach)</p>
-                      <img src="images/project/capture3.png" class="img-fluid" alt="project 1 image" width="1310" height="717">
+                      <img src="images/project/capture3.png" class="img-fluid" alt="project 1 image">
                       <br><br>
                       <a class="btn custom-btn custom-btn-bg custom-btn-link" href="https://github.com/Amna-A/GeneticAlgorithm" target="_blank">Source Code</a>
                       <br><br>
@@ -408,7 +408,7 @@ https://www.tooplate.com/view/2115-marvel
           
           <div class="col-lg-5 mr-lg-5 col-12">
             <div class="google-map w-100">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12088.558402180099!2d-73.99373482142036!3d40.75895421922642!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25855b8fb3083%3A0xa0f9aef176042a5c!2sTheater+District%2C+New+York%2C+NY%2C+USA!5e0!3m2!1sen!2smm!4v1549875377188" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+              <iframe src="https://www.google.ca/maps/place/104+St+NW,+Edmonton,+AB/@53.4989162,-113.4998889,17z/data=!3m1!4b1!4m8!1m2!2m1!1s1104+st+nw+Edmonton,+AB+T5K+2K3!3m4!1s0x53a02207649b378f:0x1c91b6ef350b77dc!8m2!3d53.4989162!4d-113.4977002" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
 
             <div class="contact-info d-flex justify-content-between align-items-center py-4 px-lg-5">
