--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@ https://www.tooplate.com/view/2115-marvel
           
           <div class="col-lg-5 mr-lg-5 col-12">
             <div class="google-map w-100">
-              <iframe src="https://www.google.ca/maps/place/104+St+NW,+Edmonton,+AB/@53.4989162,-113.4998889,17z/data=!3m1!4b1!4m8!1m2!2m1!1s1104+st+nw+Edmonton,+AB+T5K+2K3!3m4!1s0x53a02207649b378f:0x1c91b6ef350b77dc!8m2!3d53.4989162!4d-113.4977002" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+              <iframe src="https://www.google.ca/maps/place/Downtown,+Edmonton,+AB/@53.5413782,-113.5139683,14z/data=!3m1!4b1!4m5!3m4!1s0x53a02247b272d369:0x612824385e498946!8m2!3d53.5405177!4d-113.499025" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
 
             <div class="contact-info d-flex justify-content-between align-items-center py-4 px-lg-5">
