--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@ https://www.tooplate.com/view/2115-marvel
           
           <div class="col-lg-5 mr-lg-5 col-12">
             <div class="google-map w-100">
-              <iframe src="https://www.google.ca/maps/place/Downtown,+Edmonton,+AB/@53.5413782,-113.5139683,14z/data=!3m1!4b1!4m5!3m4!1s0x53a02247b272d369:0x612824385e498946!8m2!3d53.5405177!4d-113.499025" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+              <iframe width="600" height="450" style="border:0" loading="lazy" allowfullscreen src="https://www.google.com/maps/embed/v1/place?q=place_id:Eh8xMDQgU3QgTlcsIEVkbW9udG9uLCBBQiwgQ2FuYWRhIi4qLAoUChIJjzebZAcioFMR3HcLNe-2kRwSFAoSCWnTcrJHIqBTEUaJSV44JChh&key=AIzaSyBy1DX_ZiEIRfs2exlaQZa27hL8wRhze6c"></iframe>
             </div>
 
             <div class="contact-info d-flex justify-content-between align-items-center py-4 px-lg-5">
