--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@ https://www.tooplate.com/view/2115-marvel
           <div class="col-lg-5 mr-lg-5 col-12">
             <div class="google-map w-100">
             </div>
-            <iframe width="600" height="300" frameborder="0" style="border:0" allowfullscreen src="https://www.google.com/maps/embed/v1/place?q=place_id:Eh8xMDQgU3QgTlcsIEVkbW9udG9uLCBBQiwgQ2FuYWRhIi4qLAoUChIJjzebZAcioFMR3HcLNe-2kRwSFAoSCWnTcrJHIqBTEUaJSV44JChh&key=AIzaSyBy1DX_ZiEIRfs2exlaQZa27hL8wRhze6c"></iframe>
+              <iframe width="600" height="450" style="border:0" loading="lazy" allowfullscreen src="https://www.google.com/maps/embed/v1/place?q=place_id:Eh8xMDQgU3QgTlcsIEVkbW9udG9uLCBBQiwgQ2FuYWRhIi4qLAoUChIJjzebZAcioFMR3HcLNe-2kRwSFAoSCWnTcrJHIqBTEUaJSV44JChh&key=AIzaSyBy1DX_ZiEIRfs2exlaQZa27hL8wRhze6c"></iframe>
             <div class="contact-info d-flex justify-content-between align-items-center py-4 px-lg-5">
                 <div class="contact-info-item">
                   <h3 class="mb-3 text-white">Stay In Touch!</h3>
