added social media temp

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <!-- my addition -->
     <link rel="stylesheet" href="css/scrollup.css">
     <link rel="stylesheet" href="css/skills.css">
+    <link rel="stylesheet" href="css/social.css">
     
 <!--
 
@@ -458,6 +459,14 @@ https://www.tooplate.com/view/2115-marvel
    <!-- scroll up -->
   <a href="#" id="toTopBtn" class="cd-top text-replace js-cd-top cd-top--is-visible cd-top--fade-out" data-abc="true"></a>
   
+  <!-- social media -->
+  <ul class="socialIcons">
+    <li class="facebook"><a href=""><i class="fa fa-fw fa-facebook"></i>Facebook</a></li>
+    <li class="twitter"><a href=""><i class="fa fa-fw fa-twitter"></i>Twitter</a></li>
+    <li class="instagram"><a href=""><i class="fa fa-fw fa-instagram"></i>Instagram</a></li>
+    <li class="pinterest"><a href=""><i class="fa fa-fw fa-pinterest-p"></i>Pinterest</a></li>
+    <li class="steam"><a href=""><i class="fa fa-fw fa-steam"></i>Steam</a></li>
+  </ul>
   
     
     <script src="js/jquery-3.3.1.min.js"></script>
