--- a/index.html
+++ b/index.html
@@ -461,12 +461,17 @@ https://www.tooplate.com/view/2115-marvel
   
   <!-- social media -->
   <ul class="socialIcons">
-    <li class="facebook"><a href=""><i class="fa fa-fw fa-facebook"></i>Facebook</a></li>
-    <li class="twitter"><a href=""><i class="fa fa-fw fa-twitter"></i>Twitter</a></li>
-    <li class="instagram"><a href=""><i class="fa fa-fw fa-instagram"></i>Instagram</a></li>
-    <li class="pinterest"><a href=""><i class="fa fa-fw fa-pinterest-p"></i>Pinterest</a></li>
-    <li class="steam"><a href=""><i class="fa fa-fw fa-steam"></i>Steam</a></li>
+    <p class="text-center">follow me</p>
+    
+    <li class="github"><a target="_blank" href="https://github.com/Amna-A"><i class="fa fa-github"></i>GitHub</a></li>
+    <li class="stackoverflow"><a target="_blank" href="https://stackoverflow.com/users/14117545/kamoon"><i class="fa fa-fw fa-stack-overflow"></i>StackOverflow</a></li>
+    <li class="linkedin"><a target="_blank" href="https://www.linkedin.com/in/amina-eltahir/"><i class="fa fa-fw fa-linkedin"></i>LinkedIn</a></li>
+    <li class="hackerrank"><a target="_blank" href="https://www.hackerrank.com/amna_a_ibrahim22?hr_r=1"><i class="fab fa-hackerrank"></i>HackerRank</a></li>
+    <li class="leetcode"><a target="_blank" href="https://leetcode.com/user4041uz/"><img align="center" src="images/leetcode.svg" alt="leetcode" height="30" width="40" />LeetCode</li></a>
+    <li class="codewars"><a target="_blank" href="https://www.codewars.com/users/yoona"><img align="center" src="images/codewars-black.svg" alt="codewars" height="30" width="40" />codewars</li></a>
+
   </ul>
+  <br></br>
   
     
     <script src="js/jquery-3.3.1.min.js"></script>
