fix home font color

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ https://www.tooplate.com/view/2115-marvel
     </nav>
 
     <!-- HOME -->
-    <section class="home full-screen d-lg-flex justify-content-center align-items-center" id="home" color: #ffffff>
+    <section class="home full-screen d-lg-flex justify-content-center align-items-center" id="home" style="color: #ffffff">
       <div class="container p-3 mb-2">
           <div class="text-center bg-image" style="background-image: url('images/mesh-1430108.png');height: 70vh" filter: brightness(40%)>
             <!-- <img src="images/undraw/Female Developer.svg" height="300" width="300" class="rounded float-left"> -->
