--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ https://www.tooplate.com/view/2115-marvel
           <div class="text-center bg-image" style="background-image: url('images/mesh-1430108.png');height: 70vh" filter: brightness(40%)>
             <!-- <img src="images/undraw/Female Developer.svg" height="300" width="300" class="rounded float-left"> -->
             <br></br>
-            <h3 style="color: #ffffff" class="small-text">Welcome to my page!</h3>
+            <h3 style="color: #ffffff" class="small-text animate" data-animate="fadeInUp">Welcome to my page!</h3>
             <h1 style="color: #ffffff">I'm Amina Eltahir</h1>
             <p style="color: #ffffff">A Software Engineer Based in Alberta</p>
             <a href="#about" class="col-auto example-block btn mr-lg-2 custom-btn">find out more about me!<img class="image" src="https://i.imgur.com/q3Q5A5e.gif" alt="Smiling Face With Heart-Eyes" title="Smiling Face With Heart-Eyes" width="34" height="34"></a>
