--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@ https://www.tooplate.com/view/2115-marvel
             <!-- <img src="images/undraw/Female Developer.svg" height="300" width="300" class="rounded float-left"> -->
             <br></br>
             <h3 style="color: #ffffff" class="small-text animate" data-animate="fadeInUp">Welcome to my page!</h3>
-            <h1 style="color: #ffffff">I'm Amina Eltahir</h1>
-            <p style="color: #ffffff">A Software Engineer Based in Alberta</p>
+            <h1 style="color: #ffffff" class="small-text animate" data-animate="fadeInUp">I'm Amina Eltahir</h1>
+            <p style="color: #ffffff" class="small-text animate" data-animate="fadeInUp">A Software Engineer Based in Alberta</p>
             <a href="#about" class="col-auto example-block btn mr-lg-2 custom-btn">find out more about me!<img class="image" src="https://i.imgur.com/q3Q5A5e.gif" alt="Smiling Face With Heart-Eyes" title="Smiling Face With Heart-Eyes" width="34" height="34"></a>
           <br></br>
           </div>
