--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <link rel="stylesheet" href="css/scrollup.css">
     <link rel="stylesheet" href="css/skills.css">
     <link rel="stylesheet" href="css/social.css">
+    <link rel="stylesheet" href="css/animate.css">
+    
     
 <!--
 
