--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Personal Webpage">
     <meta name="keywords" content="software developer, Python developer, Rust, C++ Developer, software engineer, python, c++, backend, fullstack, forntend">
     <meta name="author" content="">
@@ -22,8 +22,6 @@
     <link rel="stylesheet" href="css/scrollup.css">
     <link rel="stylesheet" href="css/skills.css">
     <link rel="stylesheet" href="css/social.css">
-    <link rel="stylesheet" href="css/animate.css">
-    
     
 <!--
 
@@ -87,9 +85,9 @@ https://www.tooplate.com/view/2115-marvel
           <div class="text-center bg-image" style="background-image: url('images/mesh-1430108.png');height: 70vh" filter: brightness(40%)>
             <!-- <img src="images/undraw/Female Developer.svg" height="300" width="300" class="rounded float-left"> -->
             <br></br>
-            <h3 style="color: #ffffff" class="small-text animate" data-animate="fadeInUp">Welcome to my page!</h3>
-            <h1 style="color: #ffffff" class="small-text animate" data-animate="fadeInUp">I'm Amina Eltahir</h1>
-            <p style="color: #ffffff" class="small-text animate" data-animate="fadeInUp">A Software Engineer Based in Alberta</p>
+            <h3 style="color: #ffffff" class="small-text">Welcome to my page!</h3>
+            <h1 style="color: #ffffff">I'm Amina Eltahir</h1>
+            <p style="color: #ffffff">A Software Engineer Based in Alberta</p>
             <a href="#about" class="col-auto example-block btn mr-lg-2 custom-btn">find out more about me!<img class="image" src="https://i.imgur.com/q3Q5A5e.gif" alt="Smiling Face With Heart-Eyes" title="Smiling Face With Heart-Eyes" width="34" height="34"></a>
           <br></br>
           </div>
