--- a/index.html
+++ b/index.html
@@ -146,6 +146,12 @@ https://www.tooplate.com/view/2115-marvel
                                 <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/python/python-original.svg" alt="python" width="80" height="80"/> 
                             </a>
                             <p>Python</p>
+                        </div>
+                        <div class="imgContainer">
+                          <a href="https://www.geeksforgeeks.org/c-language-set-1-introduction/" target="_blank"> 
+                              <img src="https://raw.githubusercontent.com/jmnote/z-icons/master/svg/c.svg" alt="cplusplus" width="80" height="80"/> 
+                          </a>
+                          <p>C</p>
                         </div>          
                         <div class="imgContainer">
                             <a href="https://www.w3schools.com/cpp/" target="_blank"> 
@@ -180,6 +186,12 @@ https://www.tooplate.com/view/2115-marvel
                             </a>
                             <p>JavaScript</p>
                         </div> 
+                        <div class="imgContainer">
+                          <a href="https://getbootstrap.com/" target="_blank"> 
+                              <img src="https://raw.githubusercontent.com/jmnote/z-icons/master/svg/bootstrap.svg" alt="cplusplus" width="80" height="80"/> 
+                          </a>
+                          <p>Bootstrap</p>
+                        </div>  
                         <div class="imgContainer">
                         
                             <a href="https://www.postgresql.org/" target="_blank"> 
