--- a/index.html
+++ b/index.html
@@ -488,18 +488,52 @@ https://www.tooplate.com/view/2115-marvel
   <a href="#" id="toTopBtn" class="cd-top text-replace js-cd-top cd-top--is-visible cd-top--fade-out" data-abc="true"></a>
   
   <!-- social media -->
-  <ul class="socialIcons">
-    <p class="text-center">follow me</p>
-    
-    <li class="github"><a target="_blank" href="https://github.com/Amna-A"><i class="fa fa-github"></i>GitHub</a></li>
-    <li class="stackoverflow"><a target="_blank" href="https://stackoverflow.com/users/14117545/kamoon"><i class="fa fa-fw fa-stack-overflow"></i>StackOverflow</a></li>
-    <li class="linkedin"><a target="_blank" href="https://www.linkedin.com/in/amina-eltahir/"><i class="fa fa-fw fa-linkedin"></i>LinkedIn</a></li>
-    <li class="hackerrank"><a target="_blank" href="https://www.hackerrank.com/amna_a_ibrahim22?hr_r=1"><i class="fab fa-hackerrank"></i>HackerRank</a></li>
-    <li class="leetcode"><a target="_blank" href="https://leetcode.com/user4041uz/"><img align="center" src="images/leetcode.svg" alt="leetcode" height="30" width="40" />LeetCode</li></a>
-    <li class="codewars"><a target="_blank" href="https://www.codewars.com/users/yoona"><img align="center" src="images/codewars-black.svg" alt="codewars" height="30" width="40" />codewars</li></a>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <div class="container">
+        <div class="headline">
+          <h1>follow me</h1>
+        </div>
+        <div class="social-buttons">        
+        <!-- fstackoverflow   Button -->
+                <a href="https://stackoverflow.com/users/14117545/kamoon" target="blank" class="social-margin"> 
+                  <div class="social-icon stackoverflow ">
+                    <i class="fa fa-stack-overflow" aria-hidden="true"></i> 
+                  </div>
+                </a>
+                <!-- github Button -->
+                <a href="https://github.com/Amna-A" target="blank"  class="social-margin">
+                  <div class="social-icon github">
+                    <i class="fa fa-github" aria-hidden="true"></i>
+                  </div>
+                </a>
+                <!-- LinkedIn Button -->
+                <a href="https://www.linkedin.com/in/amina-eltahir/" class="social-margin" target="blank">
+                  <div class="social-icon linkedin">
+                    <i class="fa fa-linkedin" aria-hidden="true"></i>
+                  </div> 
+                </a>
+                <!-- hackerrank Button -->
+                <a href="https://www.hackerrank.com/amna_a_ibrahim22?hr_r=1"  target="blank" class="social-margin">
+                  <div class="social-icon hackerrank">
+                    <i class="fab fa-hackerrank" aria-hidden="true"></i>
+                  </div>
+                </a>
 
-  </ul>
-  <br></br>
+                <!-- leetcode Button -->
+                <a class="social-margin" target="_blank" href="https://leetcode.com/user4041uz/">
+                  <div class="social-icon leetcode">
+                    <img align="center" src="images/leetcode.svg" alt="leetcode" height="20" width="20" />
+                  </div>
+                </a>
+                <!-- codewars -->
+                <a class="social-margin" target="_blank" href="https://www.codewars.com/users/yoona">
+                  <div class="social-icon codewars">
+                    <img align="center" src="images/codewars-black.svg" alt="codewars" height="20" width="20" />
+                  </div>
+                </a>
+
+        </div>
+        </div>
   
     
     <script src="js/jquery-3.3.1.min.js"></script>
