--- a/index.html
+++ b/index.html
@@ -488,8 +488,8 @@ https://www.tooplate.com/view/2115-marvel
   <a href="#" id="toTopBtn" class="cd-top text-replace js-cd-top cd-top--is-visible cd-top--fade-out" data-abc="true"></a>
   
   <!-- social media -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <div class="container">
+  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+    <div style="text-align: center;">
         <div class="headline">
           <h1>follow me</h1>
         </div>
