--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="css/scrollup.css">
     <link rel="stylesheet" href="css/skills.css">
     <link rel="stylesheet" href="css/social.css">
+    <link rel="stylesheet" href="css/volunteer.css">
     
 <!--
 
@@ -429,6 +430,46 @@ https://www.tooplate.com/view/2115-marvel
           </div>
       </div>
   </section>
+
+  <!-- volunteer -->
+    <div class="container">
+      <h1>Volunteer Work</h1>
+      <br> </br>
+      <div class="row">
+        <div class="col-sm-4">
+          <div class="well">
+            <p style="float: left;"><img src="images/UofA.png" height="80px" width="80px" border="1px"></p>
+            <h3><span>Classroom Mentor </span><small> 2020</small></h3>
+            </br>
+            <p class="volunteer"><a href="https://www.ualberta.ca/chancellor-and-senate/u-school/index.html" target="_blank">U School</a> Classroom Mentor.
+            Manage and participate in activities with students to help them learn more about University life</p>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="well">
+            <p style="float: left;"><img src="images/SU.png" height="70px" width="70px" border="1px"></p>
+            <h3><span>General Volunteer </span><small> 2020 - 2021</small></h3>
+            </br>
+            <p class="volunteer">Facilitate multiple activities across campus including welcoming new students. </p>
+          </br>
+          </div>        
+        </div>
+        <div class="col-sm-4">
+          <div class="well">
+            <p style="float: left;"><img src="images/SUST.png" height="50px" width="50px" border="1px"></p>    
+            <h3><span> Student Mentor </span><small> 2020</small></h3>  
+          </br>
+            <ul class="volunteer">
+            </br>
+              <li>Directed engineering project's presentation process.</li>
+              <li>Advised students and help them obtain sponserships.</li>
+            </br>
+            </ul>
+          </div>        
+        </div>
+      </div>
+    </div>
+    <br></br>
 
     <!-- CONTACT -->
     <section class="contact py-5" id="contact">
