--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ https://www.tooplate.com/view/2115-marvel
             <br></br>
             <h3 style="color: #ffffff" class="small-text">Welcome to my page!</h3>
             <h1 style="color: #ffffff">I'm Amina Eltahir</h1>
-            <p style="color: #ffffff">A Software Engineer Based in Alberta</p>
+            <p style="color: #ffffff">A Software Engineer & Teaching Assistant Based in Alberta, Canada</p>
             <br></br>
             <a href="#about" class="col-auto example-block btn mr-lg-2 custom-btn">find out more about me!<img class="image" src="https://i.imgur.com/q3Q5A5e.gif" alt="Smiling Face With Heart-Eyes" title="Smiling Face With Heart-Eyes" width="34" height="34"></a>
           <br></br>
