fixed sizes of volunteer

--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@ https://www.tooplate.com/view/2115-marvel
         </div>
         <div class="col-sm-4">
           <div class="well">
-            <p style="float: left;"><img src="images/SU.png" height="70px" width="70px" border="1px"></p>
+            <p style="float: left;"><img src="images/SU.png" height="60px" width="60px" border="1px"></p>
             <h3><span>General Volunteer </span><small> 2020 - 2021</small></h3>
             </br>
             <p class="volunteer">Facilitate multiple activities across campus including welcoming new students. </p>
@@ -456,9 +456,8 @@ https://www.tooplate.com/view/2115-marvel
         </div>
         <div class="col-sm-4">
           <div class="well">
-            <p style="float: left;"><img src="images/SUST.png" height="50px" width="50px" border="1px"></p>    
-            <h3><span> Student Mentor </span><small> 2020</small></h3>  
-          </br>
+            <p style="float: left;"><img src="images/SUST.png" height="70px" width="70px" border="1px"></p>    
+            <h3><span> Student Advisor   </span><small> 2020</small></h3>  
             <ul class="volunteer">
             </br>
               <li>Directed engineering project's presentation process.</li>
