--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ https://www.tooplate.com/view/2115-marvel
                       <p class="justify-content-centerp">Building a successful product is a challenge. I am enthusiastic about solving problems in creative ways to deliver the best customer experience. I'm highly energetic in full stack development with a strong passion for Backend and algorithms design and applications.</p>
                       
                       <div class="custom-btn-group mt-4">
-                        <a href="#" class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i> Download CV</a>
+                        <a href="TA resume 2021.pdf" download="Amina_Eltahir_RESUME" class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i> Download CV</a>
                         <a href="#project" class="btn custom-btn custom-btn-bg custom-btn-link">Check My Projects</a>
                         <a href="#contact" class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i>Contact Me</a>
                       </div>
