--- a/index.html
+++ b/index.html
@@ -335,6 +335,22 @@ https://www.tooplate.com/view/2115-marvel
                       </div>
 
                       <div class="timeline-wrapper">
+                        <div class="timeline-yr">
+                             <span>2019</span>
+                        </div>
+                        <div class="timeline-info">
+                             <h3><span>Private Tutor</span><small>Freelance</small></h3>
+                             <div>
+                               <ul class="list-unstyled" style="list-style: circle;">
+                                 <li> Helping students with understanding daily Assignments and homework.</li>
+                                 <li>Explain all subjects.</li>
+                                 <li>Prepare and correct mock exams.</li>
+                               </ul>
+                             </div>
+                        </div>
+                   </div>
+
+                      <div class="timeline-wrapper">
                           <div class="timeline-yr">
                               <span>2019</span>
                           </div>
