--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@ https://www.tooplate.com/view/2115-marvel
                              <h3><span>Private Tutor</span><small>Freelance</small></h3>
                              <div>
                                <ul class="list-unstyled" style="list-style: circle;">
-                                 <li> Helping students with understanding daily Assignments and homework.</li>
+                                 <li>Helping students with understanding daily Assignments and homework.</li>
                                  <li>Explain all subjects.</li>
                                  <li>Prepare and correct mock exams.</li>
                                </ul>
@@ -452,15 +452,7 @@ https://www.tooplate.com/view/2115-marvel
       <h1>Volunteer Work</h1>
       <br> </br>
       <div class="row">
-        <div class="col-sm-4">
-          <div class="well">
-            <p style="float: left;"><img src="images/UofA.png" height="80px" width="80px" border="1px"></p>
-            <h3><span>Classroom Mentor </span><small> 2020</small></h3>
-            </br>
-            <p class="volunteer"><a href="https://www.ualberta.ca/chancellor-and-senate/u-school/index.html" target="_blank">U School</a> Classroom Mentor.
-            Manage and participate in activities with students to help them learn more about University life</p>
-          </div>
-        </div>
+
         <div class="col-sm-4">
           <div class="well">
             <p style="float: left;"><img src="images/SU.png" height="60px" width="60px" border="1px"></p>
@@ -470,6 +462,50 @@ https://www.tooplate.com/view/2115-marvel
           </br>
           </div>        
         </div>
+
+        <div class="col-sm-4">
+          <div class="well">
+            <p style="float: left;"><img src="images/FR.jpg" height="60px" width="60px" border="1px"></p>
+            <h3><span>Warehouse Volunteer </span><small> 2020 </small></h3>
+            </br>
+            <p class="volunteer">“Fresh Routes”, Edmonton, Canada. </p>
+            <p class="volunteer">Assembles emergency food orders. </p>
+          </br>
+          </div>        
+        </div>
+
+        <div class="col-sm-4">
+          <div class="well">
+            <p style="float: left;"><img src="images/UofA.png" height="60px" width="60px" border="1px"></p>
+            <h3><span>Image Captioning Volunteer </span><small> 2020 </small></h3>
+            </br>
+            <p class="volunteer"><a href="https://profsckang.wixsite.com/uofa-rlab" target="_blank">“AIRCon-Lab”</a>, University of Alberta, Edmonton, Canada</p>
+            <p class="volunteer"> Participate in image labeling for a academic researches in Artificial Intelligence and Robotics in Construction. </p>
+          </br>
+          </div>        
+        </div>
+
+        <div class="col-sm-4">
+          <div class="well">
+            <p style="float: left;"><img src="images/UofA.png" height="60px" width="60px" border="1px"></p>
+            <h3><span>FURCA Judge </span><small> 2020 </small></h3>
+            </br>
+            <p class="volunteer">University of Alberta, Edmonton, Canada</p>
+            <p class="volunteer">Attend student presentations, assess presentations based on judging criteria, and provide constructive feedback to student presenters</p>
+          </br>
+          </div>        
+        </div>
+
+        <div class="col-sm-4">
+          <div class="well">
+            <p style="float: left;"><img src="images/UofA.png" height="80px" width="80px" border="1px"></p>
+            <h3><span>Classroom Mentor </span><small> 2020</small></h3>
+            </br>
+            <p class="volunteer"><a href="https://www.ualberta.ca/chancellor-and-senate/u-school/index.html" target="_blank">U School</a> Classroom Mentor.
+            Manage and participate in activities with students to help them learn more about University life</p>
+          </div>
+        </div>
+
         <div class="col-sm-4">
           <div class="well">
             <p style="float: left;"><img src="images/SUST.png" height="70px" width="70px" border="1px"></p>    
