fixed bullets styling

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ https://www.tooplate.com/view/2115-marvel
                            <div class="timeline-info">
                                 <h3><span>Sales Associate</span><small>Steam Dry Canada</small></h3>
                                 <div>
-                                  <ul class="list-unstyled" style="list-style: circle;">
+                                  <ul class="bullets" style="margin-left: 1rem;">
                                     <li>Involved in the initiation of consumer interest and enquiry into the company's services.</li>
                                     <li>Achieved one of the highest lead generation rates in the region.</li>
                                   </ul>
@@ -341,7 +341,7 @@ https://www.tooplate.com/view/2115-marvel
                         <div class="timeline-info">
                              <h3><span>Private Tutor</span><small>Freelance</small></h3>
                              <div>
-                               <ul class="list-unstyled" style="list-style: circle;">
+                               <ul class="bullets" style="margin-left: 1rem;">
                                  <li>Helping students with understanding daily Assignments and homework.</li>
                                  <li>Explain all subjects.</li>
                                  <li>Prepare and correct mock exams.</li>
@@ -356,7 +356,7 @@ https://www.tooplate.com/view/2115-marvel
                           </div>
                           <div class="timeline-info">
                               <h3><span>Technical Sales & Marketing Engineer</span><small>Golden Square Technology</small></h3>
-                              <ul style="list-style-type: disc;">
+                              <ul class="bullets" style="margin-left: 1rem;">
                                 <li>Demonstrated strong leadership skills by working as a team leader representing the company & its partners in local Exhibitions <a href="https://mtc-sd.com/en/events/conrinthia/" target="_blank">Information Technology Exhibition (SITEX 2018)</a></li>
                                 <li>Served as the official spokesperson for the company's main partner <a href="https://www.futurecard.com/" target="_blank">FUTURE CARD</a>, Sudan Branch in 2019 (smart 
                                   cards company based in the UAE), and featured on their official promotional 
@@ -372,8 +372,8 @@ https://www.tooplate.com/view/2115-marvel
                           <div class="timeline-info">
                               <h3><span>Teaching Assistant<small>SUST Sudan</small></h3>
                               <p>Teaching Laboratory courses including course curriculum preparation of:</p>
-                              <div style="list-style-type: disc; list-style-position: inside;">
-                                <ul>
+                              <div>
+                                <ul class="bullets" style="margin-left: 1rem;">
                                   <li>Computer Networks (Linux basics, Ubunto)</li>
                                   <li>Microcontroller (BASCOM, ATmega series, Proteus Professional)</li>
                                   <li>Digital Image Processing (MATLAB)</li>
@@ -519,7 +519,7 @@ https://www.tooplate.com/view/2115-marvel
           </br> 
             <p class="volunteer">SUST, Khartoum, Sudan</p>
             </br>
-            <ul class="volunteer">
+            <ul class="volunteer bullets" style="margin-left: 1rem;">
             
               <li>Directed engineering project's presentation process.</li>
               <li>Advised students and help them obtain sponserships.</li>
