--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@ https://www.tooplate.com/view/2115-marvel
                               <span>2019</span>
                           </div>
                           <div class="timeline-info">
-                              <h3><span>Technical Sales & Marketing Engineer</span><small>Golden Square Technology</small></h3>
+                              <h3><span>Technical Sales & Marketing Engineer</span><small><a href="http://goldensquaregroup.com/golden-square-technology.php" target="_blank">Golden Square Technology</a></small></h3>
                               <ul class="bullets" style="margin-left: 1rem;">
                                 <li>Demonstrated strong leadership skills by working as a team leader representing the company & its partners in local Exhibitions <a href="https://mtc-sd.com/en/events/conrinthia/" target="_blank">Information Technology Exhibition (SITEX 2018)</a></li>
                                 <li>Served as the official spokesperson for the company's main partner <a href="https://www.futurecard.com/" target="_blank">FUTURE CARD</a>, Sudan Branch in 2019 (smart 
@@ -370,7 +370,7 @@ https://www.tooplate.com/view/2115-marvel
                               <span>2018</span>
                           </div>
                           <div class="timeline-info">
-                              <h3><span>Teaching Assistant<small>SUST Sudan</small></h3>
+                              <h3><span>Teaching Assistant<small><a href="https://www.sustech.edu/" target="_blank">SUST Sudan</a></small></h3>
                               <p>Teaching Laboratory courses including course curriculum preparation of:</p>
                               <div>
                                 <ul class="bullets" style="margin-left: 1rem;">
@@ -436,7 +436,7 @@ https://www.tooplate.com/view/2115-marvel
                               <span>2017</span>
                           </div>
                           <div class="timeline-info">
-                              <h3><span>Bachelor of Engineering </span><small>SUST Sudan</small></h3>
+                              <h3><span>Bachelor of Engineering </span><small><a href="https://www.sustech.edu/" target="_blank">SUST Sudan</a></small></h3>
                               <p>BEng in Electronics. Computer & Networks Engineering Major.</p>
                           </div>
                       </div>
@@ -517,7 +517,7 @@ https://www.tooplate.com/view/2115-marvel
             <p style="float: left;"><img src="images/SUST.png" height="70px" width="70px" border="1px"></p>    
             <h3><span> Student Advisor   </span><small> 2020</small></h3> 
           </br> 
-            <p class="volunteer">SUST, Khartoum, Sudan</p>
+            <p class="volunteer"><a href="https://www.sustech.edu/" target="_blank">SUST</a>, Khartoum, Sudan</p>
             </br>
             <ul class="volunteer bullets" style="margin-left: 1rem;">
             
