--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@ https://www.tooplate.com/view/2115-marvel
 
         <div class="col-sm-4 cl">
           <div class="well">
-            <p style="float: left;"><img src="images/UofA.png" height="60px" width="60px" border="1px"></p>
+            <p style="float: left;"><img src="images/UofA.png" height="80px" width="80px" border="1px"></p>
             <h3><span>Image Captioning Volunteer </span><small> 2020 </small></h3>
             </br>
             <p class="volunteer"><a href="https://profsckang.wixsite.com/uofa-rlab" target="_blank">“AIRCon-Lab”</a>, University of Alberta, Edmonton, Canada</p>
@@ -490,9 +490,9 @@ https://www.tooplate.com/view/2115-marvel
 
         <div class="col-sm-4 cl">
           <div class="well">
-            <p style="float: left;"><img src="images/UofA.png" height="60px" width="60px" border="1px"></p>
-          </br>
-            <h3><span>FURCA Judge </span><small> 2020 </small></h3>
+            <p style="float: left;"><img src="images/UofA.png" height="80px" width="80px" border="1px"></p>
+          
+            <h3><span></br>FURCA Judge </span><small> 2020 </small></h3>
             </br>
             <p class="volunteer">University of Alberta, Edmonton, Canada</p>
             <p class="volunteer">Assess student presentations, and provide constructive feedback to student presenters</p>
