--- a/index.html
+++ b/index.html
@@ -383,6 +383,16 @@ https://www.tooplate.com/view/2115-marvel
                           </div>
                       </div>
 
+                      <div class="timeline-wrapper">
+                        <div class="timeline-yr">
+                            <span>2017</span>
+                        </div>
+                        <div class="timeline-info">
+                            <h3><span>Translator <small><a href="https://www.sustech.edu/" target="_blank">SUST Sudan</a></small></h3>
+                            <p>Technical Arabic to English documents translation and editing as part of the college of engineering’s technical translation team for official documents. </p>
+                        </div>
+                    </div>
+
                   </div>
               </div>
 
@@ -526,6 +536,31 @@ https://www.tooplate.com/view/2115-marvel
           
             </ul>
           </div>        
+        </div>
+      </div>
+    </div>
+    <br></br>
+
+    <!-- Interest -->
+    <div class="container">
+      <h1>Interests & Languages</h1>
+      <div class="row" style="margin-left: 2rem;">
+        <div clas="col-md-4">
+          <h3>Interests</h3>
+          <ul class="bullets" style="margin-left: 2rem;">
+            <li>Reading</li>
+            <li>Trying new cooking reciepes</li>
+            <li>Learning languages</li>
+          </ul>
+        </div>
+       
+        <div class="col-md-4">
+          <h3>Languages</h3>
+          <ul class="bullets" style="margin-left: 2rem;">
+            <li>Arabic (Mother Tongue)</li>
+            <li>English (Fluent)</li>
+            <li>Korean (Fluent)</li>
+          </ul>
         </div>
       </div>
     </div>
