--- a/index.html
+++ b/index.html
@@ -558,8 +558,10 @@ https://www.tooplate.com/view/2115-marvel
           <h3>Languages</h3>
           <ul class="bullets" style="margin-left: 2rem;">
             <li>Arabic (Mother Tongue)</li>
-            <li>English (Fluent)</li>
-            <li>Korean (Fluent)</li>
+            <li>English (Fluent, IELTS Academic Band 7)</li>
+            <li>Korean (Fluent, self taught)</li>
+            <li>Spanish (In progress)</li>
+            <li>Next ? >> Frensh</li>
           </ul>
         </div>
       </div>
