--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@ https://www.tooplate.com/view/2115-marvel
             <h3><span></br>FURCA Judge </span><small> 2020 </small></h3>
             </br>
             <p class="volunteer">University of Alberta, Edmonton, Canada</p>
-            <p class="volunteer">Assess student presentations, and provide constructive feedback to student presenters</p>
+            <p class="volunteer">Assess student presentations, and provide constructive feedback to students.</p>
           </br>
           </div>        
         </div>
@@ -557,11 +557,11 @@ https://www.tooplate.com/view/2115-marvel
         <div class="col-md-4">
           <h3>Languages</h3>
           <ul class="bullets" style="margin-left: 2rem;">
-            <li>Arabic (Mother Tongue)</li>
-            <li>English (Fluent, IELTS Academic Band 7)</li>
-            <li>Korean (Fluent, self taught)</li>
-            <li>Spanish (In progress)</li>
-            <li>Next ? >> Frensh</li>
+            <li><b>Arabic</b> (Mother Tongue)</li>
+            <li><b>English</b> (Fluent, IELTS Academic Band 7)</li>
+            <li><b>Korean</b> (Fluent, self taught)</li>
+            <li><b>Spanish</b> (In progress)</li>
+            <li>Next ? >> <b>Frensh</b></li>
           </ul>
         </div>
       </div>
