--- a/index.html
+++ b/index.html
@@ -420,6 +420,16 @@ https://www.tooplate.com/view/2115-marvel
                         </div>
                       </div>
 
+                      <div class="timeline-wrapper">
+                        <div class="timeline-yr">
+                            <span>2020</span>
+                        </div>
+                        <div class="timeline-info">
+                            <h3><span>Graduate Ethics Training (GET)</span><small>University of Alberta</small></h3>
+                            <p>Web-based course offered by the Faculty of Graduate Studies and Research</p>
+                        </div>
+                      </div>
+
 
                       <div class="timeline-wrapper">
                         <div class="timeline-yr">
