punctuation and training

--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@ https://www.tooplate.com/view/2115-marvel
                         </div>
                         <div class="timeline-info">
                             <h3><span>PCAP: Programming Essentials in Python</span><small>CISCO</small></h3>
-                            <p>Instructor-led, Online self-paced course</p>
+                            <p>Instructor-led, Online self-paced course.</p>
                         </div>
                       </div>
 
@@ -426,7 +426,7 @@ https://www.tooplate.com/view/2115-marvel
                         </div>
                         <div class="timeline-info">
                             <h3><span>Graduate Ethics Training (GET)</span><small>University of Alberta</small></h3>
-                            <p>Web-based course offered by the Faculty of Graduate Studies and Research</p>
+                            <p>Web-based course offered by the Faculty of Graduate Studies and Research.</p>
                         </div>
                       </div>
 
@@ -437,7 +437,7 @@ https://www.tooplate.com/view/2115-marvel
                         </div>
                         <div class="timeline-info">
                             <h3><span>HTML5 & CSS3</span><small>BitDegree</small></h3>
-                            <p>Online self-paced course</p>
+                            <p>Online self-paced course.</p>
                         </div>
                       </div>
 
@@ -447,7 +447,7 @@ https://www.tooplate.com/view/2115-marvel
                         </div>
                         <div class="timeline-info">
                             <h3><span>Social Media Marketing</span><small>New Horizon Training Centre</small></h3>
-                            <p>Training course in marketing through social media</p>
+                            <p>Training course in marketing through social media. Instructor: <a href="https://www.facebook.com/amgadlbasery/posts_to_page/" target="_blank">Amged Albasery/a></p>
                         </div>
                      </div>
 
