--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@ https://www.tooplate.com/view/2115-marvel
                         </div>
                         <div class="timeline-info">
                             <h3><span>Social Media Marketing</span><small>New Horizon Training Centre</small></h3>
-                            <p>Training course in marketing through social media. Instructor: <a href="https://www.facebook.com/amgadlbasery/posts_to_page/" target="_blank">Amged Albasery/a></p>
+                            <p>Training course in marketing through social media. Instructor: <a href="https://www.facebook.com/amgadlbasery/posts_to_page/" target="_blank">Amged Albasery</p></a>
                         </div>
                      </div>
 
