--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Personal Webpage">
-    <meta name="keywords" content="software developer, Python developer, Rust, C++ Developer, software engineer, python, c++, backend, fullstack, forntend">
+    <meta name="keywords" content="software developer,research Assistant, teacheing assistant,heuristic search,algorithms, data structure, Python developer, Rust, C++ Developer, software engineer, python, c++, backend, fullstack, forntend">
     <meta name="author" content="">
 
     <title>Amina Eltahir Personal Portfolio</title>
@@ -558,6 +558,8 @@ https://www.tooplate.com/view/2115-marvel
         <div clas="col-md-4">
           <h3>Interests</h3>
           <ul class="bullets" style="margin-left: 2rem;">
+            <li>Data Structures and Algorithms</li>
+            <li>Heuristic Search</li>
             <li>Reading</li>
             <li>Trying new cooking reciepes</li>
             <li>Learning languages</li>
