--- a/index.html
+++ b/index.html
@@ -512,9 +512,9 @@ https://www.tooplate.com/view/2115-marvel
           <div class="well">
             <p style="float: left;"><img src="images/UofA.png" height="80px" width="80px" border="1px"></p>
           
-            <h3><span></br>FURCA Judge </span><small> 2020 </small></h3>
+            <h3><span>FURCA Student Judge </span><small> 2020 </small></h3>
             </br>
-            <p class="volunteer">University of Alberta, Edmonton, Canada</p>
+            <p class="volunteer">University of Alberta, Edmonton, Canada.</p>
             <p class="volunteer">Assess student presentations, and provide constructive feedback to students.</p>
           </br>
           </div>        
@@ -554,9 +554,11 @@ https://www.tooplate.com/view/2115-marvel
     <!-- Interest -->
     <div class="container">
       <h1>Interests & Languages</h1>
+    </br>
       <div class="row" style="margin-left: 2rem;">
-        <div clas="col-md-4">
-          <h3>Interests</h3>
+        <div clas="col-md-4" style="font-size: 16px;">
+          <h3 style="color: rgba(92, 84, 84, 0.966);">Interests</h3>
+          </br>
           <ul class="bullets" style="margin-left: 2rem;">
             <li>Data Structures and Algorithms</li>
             <li>Heuristic Search</li>
@@ -566,8 +568,9 @@ https://www.tooplate.com/view/2115-marvel
           </ul>
         </div>
        
-        <div class="col-md-4">
-          <h3>Languages</h3>
+        <div class="col-md-4" style="margin-left: 6rem; font-size: 16px;">
+          <h3 style="color: rgba(92, 84, 84, 0.966);">Languages</h3>
+        </br>
           <ul class="bullets" style="margin-left: 2rem;">
             <li><b>Arabic</b> (Mother Tongue)</li>
             <li><b>English</b> (Fluent, IELTS Academic Band 7)</li>
