interests style change

--- a/index.html
+++ b/index.html
@@ -555,8 +555,8 @@ https://www.tooplate.com/view/2115-marvel
     <div class="container">
       <h1>Interests & Languages</h1>
     </br>
-      <div class="row" style="margin-left: 2rem;">
-        <div clas="col-md-4" style="font-size: 16px;">
+      <div class="row">
+        <div clas="col-md-4" style="font-size: 16px; margin-left: 2rem; line-height: 2; margin-right: 6rem;">
           <h3 style="color: rgba(92, 84, 84, 0.966);">Interests</h3>
           </br>
           <ul class="bullets" style="margin-left: 2rem;">
@@ -566,9 +566,11 @@ https://www.tooplate.com/view/2115-marvel
             <li>Trying new cooking reciepes</li>
             <li>Learning languages</li>
           </ul>
+        </br>
+      </br>
         </div>
        
-        <div class="col-md-4" style="margin-left: 6rem; font-size: 16px;">
+        <div class="col-md-4" style="margin-left: 2rem; font-size: 16px; line-height: 2;">
           <h3 style="color: rgba(92, 84, 84, 0.966);">Languages</h3>
         </br>
           <ul class="bullets" style="margin-left: 2rem;">
