--- a/index.html
+++ b/index.html
@@ -612,8 +612,8 @@ https://www.tooplate.com/view/2115-marvel
           <div class="col-lg-6 col-12">
             <div class="contact-form">
               <h2 class="mb-4">Interested to work together? Let's talk</h2>
-
-              <form action="" method="get">
+              <!-- should use php in the future as "mailto" is not working well across multiple browsers -->
+              <form action="mailto:amna.a.ibrahim22@gmail.com" method="get">
                 <div class="row">
                   <div class="col-lg-6 col-12">
                     <input type="text" class="form-control" name="name" placeholder="Your Name" id="name">
