--- a/index.html
+++ b/index.html
@@ -114,7 +114,9 @@ https://www.tooplate.com/view/2115-marvel
                               </div>
                       </h1>
 
-                      <p class="justify-content-centerp">Building a successful product is a challenge. I am enthusiastic about solving problems in creative ways to deliver the best customer experience. I'm highly energetic in full stack development with a strong passion for Backend and algorithms design and applications.</p>
+                      <p class="justify-content-centerp">Building a successful product is can be a challenge.
+
+                      </br> I am enthusiastic about solving problems in creative ways to deliver the best customer experience. I'm extreamly passionate about full stack development with a strong interest, in backend and algorithms design and applications.</p>
                       
                       <div class="custom-btn-group mt-4">
                         <a href="TA resume 2021.pdf" download="Amina_Eltahir_RESUME" class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i> Download CV</a>
