--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ https://www.tooplate.com/view/2115-marvel
 
                       <p class="justify-content-centerp">Building a successful product is can be a challenge.
 
-                      </br> I am enthusiastic about solving problems in creative ways to deliver the best customer experience. I'm extreamly passionate about full stack development with a strong interest, in backend and algorithms design and applications.</p>
+                      </br> I am enthusiastic about solving problems in creative ways to deliver the best customer experience. I'm extreamly passionate about full stack development with a strong interest in backend, and algorithms design and applications.</p>
                       
                       <div class="custom-btn-group mt-4">
                         <a href="TA resume 2021.pdf" download="Amina_Eltahir_RESUME" class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i> Download CV</a>
