--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ https://www.tooplate.com/view/2115-marvel
                       <p></p>
                       
                       <div class="custom-btn-group mt-4">
-                        <a href="Amina-Resume.pdf" download="Amina_Eltahir_RESUME" class="btn mr-lg-2 custom-btn custom-btn-bg b1"><i class='uil uil-file-alt'></i> Download CV</a>
+                        <a href="Amina-Eltahir-Resume.pdf" download="Amina_Eltahir_RESUME" class="btn mr-lg-2 custom-btn custom-btn-bg b1"><i class='uil uil-file-alt'></i> Download CV</a>
                         <a href="#project" class="btn custom-btn custom-btn-bg custom-btn-link b2">Check My Projects</a>
                         <a href="#contact" class="btn mr-lg-2 custom-btn custom-btn-bg b3"><i class='uil uil-file-alt'></i>Contact Me</a>
                       </div>
