--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@ https://www.tooplate.com/view/2115-marvel
                                 <h3><span>Sales Associate</span><small>Steam Dry Canada</small></h3>
                                 <div>
                                   <ul class="bullets" style="margin-left: 1rem;">
-                                    <li>Involved in the initiation of consumer interest and enquiry into the company's services.</li>
+                                    <li>Involved in the initiation of consumer interest and inquiries into the company's services.</li>
                                     <li>Achieved one of the highest lead generation rates in the region.</li>
                                   </ul>
                                 </div>
