fixed projects css

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ https://www.tooplate.com/view/2115-marvel
 
                 <div class="owl-carousel owl-theme center">
 
-
+<!-- 
                   <div class="item">
                     <div class="project-info">
                       <h4>Event Tracker</h4>
@@ -259,7 +259,7 @@ https://www.tooplate.com/view/2115-marvel
                       <a class="btn mr-lg-2 custom-btn" href="https://amna-a.github.io/Event-Tracker-React/" target="_blank">Live Demo</a>
                      
                     </div>
-                  </div>
+                  </div> -->
 
                   <div class="item">
                     <div class="project-info">
